core/static/css/v2/main.less
@import "layout/layout";

#header {
  position: relative;
  height: 80px;
  z-index: 3;
  .header-title-wrapper-fullscreen {
    position: absolute;
    left: 27vw;
    .navbar-brand-title-fullscreen{
      white-space: nowrap;
      margin: 25px 0 7px;
      font-family: Amiri;
      font-size: 31px;
      color: @darker-grey;
      line-height: 18px;
      letter-spacing: 0.3px;
      font-weight: 600;
    }
    .navbar-brand-sub-title{
      text-align: center;
      span {
        letter-spacing: 2px;
        font-size: 13px;
        font-weight: 500;
        color: @grey;
      }
    }
  }
  .fixed-header-wrapper {
    position: fixed;
    left: 0px;
    top: 0px;
    right: 0px;
    height: 82px;
  }

  .home-hamburger {
    color: #9d9d9d;
    &:hover {
      color: @primary-color;
    }
    .hamburger-icon {
      padding: 30px 15px;
      font-size: 17px;
      font-weight: 300;
      letter-spacing: .3px;
    }

  }

  ul.header-social-icons {
    position: absolute;
    left: 125px;
    top: 14px;
    z-index: 9999;
    display: none;
    li {
      list-style-type: none;
      display: inline-block;
      vertical-align: middle;
      padding: 0px 5px;

      .fa {
        font-size: 18px;
      }

      &.link-light {
        display: none;
      }
    }
  }
}

#main_content > .container {
  margin-top: 40px;
  &.story-grid {
    margin-top: 0px;
  }
}

#mainnav .navbar-header {
  width: 100%;
}

.single-category, .author-detail, .archive-detail, .article-detail {
  .show-content-type {
    display: none;
  }
}

@media (max-width: @screen-sm-max) and (min-width: @screen-sm-min){
  #header .header-title-wrapper-fullscreen {
      left: 20vw;
  }
}


@media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
  .nav-header-icon-title {
    padding-right: 0px;
  }
  .navbar-collapse.collapse{
    padding-left: 0;
  }
  .stories {
    a {
      padding-left: 0 !important;
    }
  }
}

@media only screen and (max-width: 767px) {

  #header, #header .fixed-header-wrapper {
    height: 56px;

    .navbar-collapse {
      max-height: ~"calc(100vh - 55px)";
      overflow: auto;
    }

  }

  .album-list, .single-category, .Visible, .PhotoZone, .Little, .VideoZone, .AudioZone, .Tongues, .gallery-home,
  .face-list, .resource-list, .about-the-editor, .authors, .donate, .archive-detail, .location-detail {

    #header ul.header-social-icons {
      display: block;
      position: fixed;
      top: 20px;
    }

    .gallery-title-icon.share-icon, .gallery-title-icon.face-upload-share {
      display: none;
    }
  }

  .header-back-to-categories {
    display: none;
  }

  .single-category {
    #header ul.header-social-icons {
      top: 13px;
    }
    .header-back-to-categories {
      border-right: 1px solid @light-grey;
      display: block;
      letter-spacing: 1px;
      padding: 0 10px 0 0;
      line-height: 30px;
      .fa-angle-left {
        color: @link-primary;
        font-size: 12px !important;
      }
    }
  }

  .single-category, .Visible, .Little, .Tongues, .gallery-home, .about-the-editor, .authors, .donate, .archive-detail,
  .location-detail {
    #header ul.header-social-icons {
      left: 20px;
    }
  }

  .face-list {
    #header ul.header-social-icons li.link-light {
      display: inline-block;
    }
  }
}

.listing-image {
  width: 100%;
  max-width: 270px;
  height: 180px !important;
}

.full-image-center {
  position: relative;
  height: 100%;
  background: #000;

  img {
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    margin: auto;

    width: auto !important;
    max-width: 100%;
    height: auto;
    max-height: 100%;
    display: block;
    vertical-align: middle;
  }
}

@media (max-width: 500px) {
  #holder {
    overflow: hidden;

    &.single-category, &.article-detail, &.author-detail, &.archive-detail, &.location-detail {
      overflow: visible;
    }
  }

  .dropdown.custom-dropdown {
    &.open > .dropdown-menu {

      li {
        padding: 8px 10px;
      }
    }
  }
}

// common styles
.dropdown.custom-dropdown {
  z-index: 2;
  button {
    border-style: solid;
    background-color: @lighter-grey;
    border-width: 1px;
    border-color: lightgrey;
    color: #b5b5b5;
    margin-top: 6px;
    padding: 5px 10px;
    font-size: 11px;
    border-radius: 3px;
    letter-spacing: 0.3px;
    font-weight: 400;
    text-transform: capitalize;
    &:hover {
      color: #444;
      border: 1px solid #444;
    }
  }
  &.open > .dropdown-menu {
    min-width: 105px;
    display: block;
    text-align: center;
    border-radius: 0;
    color: @grey;
    li {
      font-size: 14px;
      cursor: pointer;
      margin: 2px;
      &:hover {
        background: #f4f4f4;
      }
      a {
        width: 100%;
        margin: 0px;
        font-size: 14px;
        display: inline-block;
      }
      a:hover {
        color: @primary-color;

      }
    }
  }
}

